# polars

./: README.md  pyproject.toml
notebook/: 01_intro.ipynb  02_lazy_mode.ipynb  04_data_types.ipynb  05_series_dataframe.ipynb  06_conversion_pandas_numpy.ipynb
notebook/01_intro/: 02_lazy_mode.ipynb  03_Lazy_model_evaluation.ipynb
notebook/02_filter_rows/: 01_select_rows.ipynb  02_select_filter.ipynb  03_filter_in_lazy_mode.ipynb
notebook/03_selecting_trasformations/: 01_select_columns.ipynb  02_select_method.ipynb  03_select_multi_columns.ipynb  04_add_new_column.ipynb  05_add_multi_columns.ipynb  06_add_column_conditionally.ipynb  07_sorting.ipynb  08_transform_columns.ipynb  09_iterating.ipynb
notebook/04_dtype_missing_value/: 01_missing_value.ipynb  02_replace_missing_value.ipynb  03_replace_missing_value_expression.ipynb  04_numerical_dtype.ipynb  05_categorical.ipynb  06_categorical_cache.ipynb  07_nested_dtype.ipynb  08_list_dtype.ipynb  09_list_operation.ipynb  10_text_manipulation.ipynb
notebook/05_grouping_&_agg/: 01_statistics.ipynb  02_value_counts.ipynb  03_groupby_object.ipynb  04_groupby_aggregation.ipynb  05_quantile_and_histogram.ipynb  06_group_operation.ipynb  07_pivot.ipynb
notebook/06_combine_dataframe/: 01_concat.ipynb  02_join.ipynb  03_join_string_categorical.ipynb  04_filter_by_dataframe.ipynb  05_inequality_joins.ipynb
notebook/07_io/: 01_single_csv.ipynb  02_excel.ipynb  03_json_and_serialization.ipynb  04_parquet.ipynb  05_batch_csv.ipynb  06_stream_csv.ipynb  07_multiple_csv.ipynb  08_db_connection.ipynb
(+13 files in other folders)
